# viper_ros

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
action/: ObjectSearch.action  Perceive.action  ViewPlanning.action
launch/: object_search.launch  view_planner.launch
scripts/: #search_planner.py#  .#search_planner.py  demand_object_search_task.py  object_search_server.py  perception_service.py  test_client.py  view_planner.py
src/viper_ros/: executive.py  navigation.py  perception.py  setup.py  shutdown.py  state_machine.py  view_planning.py
srv/: NextView.srv  Perceive.srv
